@@ -3,6 +3,7 @@
 	  Used "indent -kr -i8 -ts8 -sob -l132 -ss" and a few manual fixups.
 	* Removed dead code and fixed function protypes to match definitions.
 	* Consolidated use of (opcode && MASK_ARITHMETIC_OPCODE) >> 20.
+	* Make 80-bit precision a compile-time option.
 
 2002-01-19  Russell King <rmk@arm.linux.org.uk>
 
